<?xml version="1.0"?>
<package format="2">
  <name>Test_pkg</name>
  <version>0.0.0</version>
  <description>The Test_pkg package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jolars20@student.aau.dk">ros</maintainer>

  <license>MIT</license>


 
  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author email="jolars20@student.aau.dk">Johannes B. Larsen</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>deps</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>deps</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>deps</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <export>
    
  </export>
</package>
